Fix spacing

--- a/kalkulator/css/index.css
+++ b/kalkulator/css/index.css
@@ -16,3 +16,7 @@ button {
 p {
     font-size: 1.25em;
 }
+
+input {
+    width: 150px;
+}
